--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: #224870;
   color: #fff;
@@ -18,7 +17,14 @@ h1 {
 .white-card {
   background-color: #FFFFFF;
   border-radius: 0.25em;
-  width: 100%;
+  width: 30rem;
+  min-width: 15rem;
+  /* height:20rem; */
+  min-height:20rem;
+  flex-direction: column;
+  margin-left: 0rem;
+  margin:1em;
+  font-size: 0.8em;
 }
 
 .white-card * {
@@ -31,6 +37,7 @@ h1 {
 
 .flex-container {
   display:flex;
+  flex-wrap:wrap;
   justify-content:center;
   align-items:center;
 }
